tests/NormalTests/paczka1/small_fuzzy/58234022.err
Error in line 5: HZKfghv A97 85,2
Error in line 7: fbjOXjhUUl A167 28,6
